Lendo os dados do cedente no appsettings.

--- a/src/BoletoBradesco.WebAPI/appsettings.json
+++ b/src/BoletoBradesco.WebAPI/appsettings.json
@@ -1,9 +1,22 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "DadosCedente": {
+        "RazaoSocial": "Fiotec - Fundação de Apoio à Pesquisa e Inovação Tecnológica",
+        "CNPJ": "02.385.669/0001-74",
+        "Endereco": "Av.Brasil",
+        "Numero": "4036",
+        "Cep": "21040-361",
+        "Bairro": "Manguinhos",
+        "Cidade": "Rio de Janeiro",
+        "Uf": "RJ",
+        "Agencia": "0026",
+        "ContaCorrente": "0184116-5",
+        "Beneficiario": 237
+    },
+    "AllowedHosts": "*"
 }
