--- a/src/BoletoBradesco.Infrastructure/BoletoBradesco.Infrastructure.csproj
+++ b/src/BoletoBradesco.Infrastructure/BoletoBradesco.Infrastructure.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="BoletoNetCore" Version="3.0.1.485" />
     <PackageReference Include="DinkToPdf" Version="1.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.7" />
     <PackageReference Include="QuestPDF" Version="2025.7.0" />
     <PackageReference Include="System.Drawing.Common" Version="9.0.7" />
     <PackageReference Include="ZXing.Net" Version="0.16.10" />
