Acertos no BoletoService

--- a/src/BoletoBradesco.WebAPI/appsettings.json
+++ b/src/BoletoBradesco.WebAPI/appsettings.json
@@ -15,7 +15,9 @@
         "Cidade": "Rio de Janeiro",
         "Uf": "RJ",
         "Agencia": "0026",
-        "ContaCorrente": "0184116-5",
+        "ContaCorrente": "0184116",
+        "DigitoCC": "5",
+        "NumeroCedente": "2601841165",
         "Beneficiario": 237
     },
     "AllowedHosts": "*"
