Acertos na instrução.

--- a/src/BoletoBradesco.WebAPI/appsettings.json
+++ b/src/BoletoBradesco.WebAPI/appsettings.json
@@ -18,6 +18,7 @@
         "ContaCorrente": "0184116",
         "DigitoCC": "5",
         "NumeroCedente": "2601841165",
+        "Instrucoes": "Após o vencimento, cobrar multa de 2% e juros de 1% ao mês em todo o valor do consignado.",
         "Beneficiario": 237
     },
     "AllowedHosts": "*"
