Mudança do PdfService

--- a/src/BoletoBradesco.WebAPI/appsettings.json
+++ b/src/BoletoBradesco.WebAPI/appsettings.json
@@ -17,9 +17,9 @@
         "Agencia": "0026",
         "ContaCorrente": "0184116",
         "DigitoCC": "5",
-        "NumeroCedente": "2601841165",
+        "NumeroCedente": "31654",
         "Instrucoes": "Após o vencimento, cobrar multa de 2% e juros de 1% ao mês em todo o valor do consignado.",
-        "Beneficiario": 237
+        "Beneficiario": "0026/0184116-5"
     },
     "AllowedHosts": "*"
 }
