--- a/src/BoletoBradesco.Infrastructure/BoletoBradesco.Infrastructure.csproj
+++ b/src/BoletoBradesco.Infrastructure/BoletoBradesco.Infrastructure.csproj
@@ -9,19 +9,20 @@
   <ItemGroup>
     <PackageReference Include="BoletoNetCore" Version="3.0.1.496" />
     <PackageReference Include="BoletoNetCore.PDF" Version="3.0.1.398" />
+    <PackageReference Include="itext" Version="9.2.0" />
     <PackageReference Include="itext.bouncy-castle-adapter" Version="9.2.0" />
+    <PackageReference Include="itext.commons" Version="9.2.0" />
+    <PackageReference Include="itext.font-asian" Version="9.2.0" />
     <PackageReference Include="itext.pdfhtml" Version="6.2.0" />
-    <PackageReference Include="itext7" Version="9.2.0" />
-    <PackageReference Include="itext7.font-asian" Version="9.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.3.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.8" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="System.Drawing.Common" Version="9.0.8" />
-    <PackageReference Include="System.Formats.Asn1" Version="9.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="10.0.0-preview.7.25380.108" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.4-beta1" />
+    <PackageReference Include="System.Drawing.Common" Version="10.0.0-preview.7.25380.108" />
+    <PackageReference Include="System.Formats.Asn1" Version="10.0.0-preview.7.25380.108" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
-    <PackageReference Include="System.Security.Cryptography.Xml" Version="9.0.8" />
-    <PackageReference Include="System.Text.Encodings.Web" Version="9.0.8" />
-    <PackageReference Include="System.Text.Json" Version="9.0.8" />
+    <PackageReference Include="System.Security.Cryptography.Xml" Version="10.0.0-preview.7.25380.108" />
+    <PackageReference Include="System.Text.Encodings.Web" Version="10.0.0-preview.7.25380.108" />
+    <PackageReference Include="System.Text.Json" Version="10.0.0-preview.7.25380.108" />
     <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
     <PackageReference Include="ZXing.Net" Version="0.16.10" />
   </ItemGroup>
